# going-native-py

./: .gitignore  CONTRIBUTING.md  README.md
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  py_algorithm.cpp  py_algorithm.hpp  py_data.cpp  py_data.hpp
src/io/: CMakeLists.txt  py_io.cpp  py_io.hpp
test/: test_algorithm.py
